# rigel

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs
src/tests/: mod.rs  rfc_hmac.rs
tests/: rfc_hmac.rs
