[package]
name = "rigel"
version = "0.1.1"
authors = ["brycx <brycx@protonmail.com>"]
description = "HMAC-SHA512 implementation optimized for embedded devices"
keywords = [ "cryptography", "crypto", "hmac", "optimization", "sha512" ]
categories = [ "cryptography", "no-std" ]
readme = "README.md"
repository = "https://github.com/brycx/rigel"
documentation = "https://docs.rs/rigel"
license = "MIT"
exclude = [
    ".gitignore",
    "benches/*",
    "tests/*",
]

[dependencies]
sha2 = { version = "0.8.0", default-features = false }
subtle = { version = "1.0.0", default-features = false }
seckey = { version = "0.9.1", default-features = false }

[dev-dependencies]
hex = "0.3.2"
hmac = "0.7.0"
orion = "0.7.3"
ring = "0.13.2"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 2

[profile.bench]
opt-level = 3
