[package]
name = "rigel"
version = "0.2.2"
authors = ["brycx <brycx@protonmail.com>"]
description = "Minimal HMAC-SHA512 implementation optimized for embedded devices"
keywords = [ "cryptography", "crypto", "hmac", "optimization", "sha512" ]
categories = [ "cryptography", "no-std" ]
readme = "README.md"
repository = "https://github.com/brycx/rigel"
documentation = "https://docs.rs/rigel"
license = "MIT"
exclude = [
    ".gitignore",
    "benches/*",
    "tests/*",
]

[dependencies]
sha2 = { version = "0.8.0", default-features = false }

[dependencies.subtle]
version = "2"
default-features = false
features = ["nightly"]

[dependencies.clear_on_drop]
version = "0.2.3"
features = ["nightly"]

[dev-dependencies]
hex = "0.3.2"
hmac = "0.7.0"
orion = "0.11.0"
ring = "0.13.5"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 2

[profile.bench]
opt-level = 3
